Jour 3 du module 4

--- a/13.jQuery/index.html
+++ b/13.jQuery/index.html
@@ -25,15 +25,16 @@
             <article class="card text">
                 <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos eius quod necessitatibus labore tenetur voluptatum voluptatem adipisci et quos neque.</p>
                 <p class="p2">In velit cum beatae nisi placeat iste totam voluptate modi officia molestiae? Odit, fugiat, doloremque magni possimus repellat enim nihil!</p>
-                <p class="hello">Hello World !</p>
+                <!--<p class="hello">Hello World !</p>-->
             </article>
-            <!--<article class="card hello">-->
-            <!--    <p>Hello World !</p>-->
-            <!--</article>-->
         </main>
         <footer>
             <p><a href="www.3wa.fr"><img src="3wa-logo.png" alt="Propriété de la 3W Academy"></a></p>
             <p>Ce matériel pédagogique est la propriété de la <a href="www.3wa.fr">3W Academy</a>. Cet exercice a été réalisé par Stephane Pereck.</p>
         </footer>
+    <!--<script>
+        $(function () {     <- Le script commence une fois le HTML lu
+        }
+    </script>-->
     </body>
 </html>
