--- a/Exercice final - Freshly Restaurant/home.html
+++ b/Exercice final - Freshly Restaurant/home.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Freshly Restaurant</title>
-    <link rel="stylesheet" href="CSS/style-home.css"/>
     <script src="https://kit.fontawesome.com/cfbfa770a3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@400;700&family=Merienda:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="CSS/style-home.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="slick/slick.css"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>-->
+    
+    <!--<script type="text/javascript" src="../ressources/jquery-3.5.1.js"></script>-->
+    <!--<script type="text/javascript" src="../ressources/jquery-3.5.1.min.js"></script>-->
 </head>
 <body>
-    <header>
-        <img src="ressources/images/logo.png" alt="Freshly Food And Drink">
-        <h1>Freshly Restaurant</h1>
+    <header class="container">
+        <div class="name">
+            <img src="ressources/images/logo.png" alt="Freshly Food And Drink">
+            <h1>Freshly Restaurant</h1>
+        </div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li class="here"><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="menus.html">Menus</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <iframe src="" frameborder="0" class="slider"></iframe>
+    <main class="container">
+        <div class="single-item">
+            <img src="ressources/images/slider-01.jpg" alt="">
+            <img src="ressources/images/slider-02.jpg" alt="">
+            <img src="ressources/images/slider-03.jpg" alt="">
+          <!--  <div>your content</div>-->
+          <!--<div>your content</div>-->
+          <!--<div>your content</div>-->
+        </div>
         <section class="welcome">
             <h2>Welcome to Freshly Restaurant</h2>
             <img src="ressources/images/location.jpg" alt="Intérieur restaurant">
@@ -34,7 +50,22 @@
             <h3>Special menus</h3>
             <article>
                 <h4>Meat menu</h4>
-                <img src="ressources/images/meat-menu.jpg" alt="Meat dish">
+                <figure>
+                    <img src="ressources/images/meat-menu.jpg" alt="Meat dish">
+                    <svg  xmlns="http://www.w3.org/2000/svg" version="1.0" width="100%" height="100%">
+                        <rect x="0" y="0" height="100%" width="100%" stroke="white" stroke-width="10" fill-opacity="0"/>
+                        <g fill="white">
+                            <text x="50%" y="50%" alignement-baseline="middle" text-anchor="middle" font-size="5rem">17 $</text>
+                            <text x="50%" y="60%" text-anchor="middle" font-style="italic">soft drinks and dessert included</text>
+                            <text x="50%" y="70%" text-anchor="middle" font-style="italic">+ taxes</text>
+                        </g>
+                    </svg>
+                    <!--<div class="prices">-->
+                    <!--    <p>17 $</p>-->
+                    <!--    <p>soft drinks and dessert included</p>-->
+                    <!--    <p>+ taxes</p>-->
+                    <!--</div>-->
+                </figure>
                 <p>Lorem ipsum dolor sit.</p>
                 <p>Tempora, quam sunt neque.</p>
                 <p>Quod, error omnis saepe!</p>
@@ -44,7 +75,17 @@
             </article>
             <article>
                 <h4>Fish menu</h4>
-                <img src="ressources/images/fish-menu.jpg" alt="Fish dish">
+                <figure>
+                    <img src="ressources/images/fish-menu.jpg" alt="Fish dish">
+                    <svg  xmlns="http://www.w3.org/2000/svg" version="1.0" width="100%" height="100%">
+                        <rect x="0" y="0" height="100%" width="100%" stroke="white" stroke-width="10" fill-opacity="0"/>
+                        <g fill="white">
+                            <text x="50%" y="50%" alignement-baseline="middle" text-anchor="middle" font-size="5rem">19 $</text>
+                            <text x="50%" y="60%" text-anchor="middle" font-style="italic">soft drinks and dessert included</text>
+                            <text x="50%" y="70%" text-anchor="middle" font-style="italic">+ taxes</text>
+                        </g>
+                    </svg>
+                </figure>
                 <p>Lorem ipsum dolor sit.</p>
                 <p>Distinctio, a corporis tempore.</p>
                 <p>Recusandae, et consequatur perferendis!</p>
@@ -54,7 +95,17 @@
             </article>
             <article>
                 <h4>Vegetarian menu</h4>
-                <img src="ressources/images/vegetarian-menu.jpg" alt="Vegetarian dish">
+                <figure>
+                    <img src="ressources/images/vegetarian-menu.jpg" alt="Vegetarian dish">
+                    <svg  xmlns="http://www.w3.org/2000/svg" version="1.0" width="100%" height="100%">
+                        <rect x="0" y="0" height="100%" width="100%" stroke="white" stroke-width="10" fill-opacity="0"/>
+                        <g fill="white">
+                            <text x="50%" y="50%" alignement-baseline="middle" text-anchor="middle" font-size="5rem">18 $</text>
+                            <text x="50%" y="60%" text-anchor="middle" font-style="italic">soft drinks and dessert included</text>
+                            <text x="50%" y="70%" text-anchor="middle" font-style="italic">+ taxes</text>
+                        </g>
+                    </svg>
+                </figure>
                 <p>Lorem ipsum dolor sit.</p>
                 <p>Similique at nesciunt nihil.</p>
                 <p>Culpa officiis quam id.</p>
@@ -90,7 +141,25 @@
             </p>
         </section>
     </footer>
-</body>
+<!--<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>-->
+<!--<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>-->
+<!--<script type="text/javascript" src="slick/slick.min.js"></script>-->
+<!--Liens CDNJS-->    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.4.1/jquery-migrate.min.js" integrity="sha512-KgffulL3mxrOsDicgQWA11O6q6oKeWcV00VxgfJw4TcM8XRQT8Df9EsrYxDf7tpVpfl3qcYD96BpyPvA4d1FDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+    $(document).ready(function(){
+        $('.single-item').slick({
+            arrows:true,
+            dots:true,
+            dotsClass:"slick-dots",
+        });
+    })
+        
+    </script>
+
+    </body>
 </html>
 <!--(header>img+h1+(nav>ul>(li>a)*4))
 +(main>iframe.slider+(section.welcome>h3+img+(p>lorem100)*2)
