Travail du samedi 13/05 sur Freshly Restaurant

--- a/Exercice final - Freshly Restaurant/home.html
+++ b/Exercice final - Freshly Restaurant/home.html
@@ -43,12 +43,12 @@
         <section class="welcome">
             <h2>Welcome to Freshly Restaurant</h2>
             <img src="ressources/images/location.jpg" alt="Intérieur restaurant">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, deleniti, inventore, eos, dolor mollitia at error cumque explicabo vitae labore tempore neque et deserunt itaque atque nemo laborum illo soluta magni totam. Corporis, unde veniam aspernatur eius fugit ratione ducimus dolorum cupiditate a illum magnam quia optio! Nesciunt, nostrum, iusto maiores vitae ipsum nobis dicta iure fugit error! Recusandae, pariatur, natus fuga commodi non optio asperiores dolores ipsam eius sunt necessitatibus excepturi itaque cupiditate ipsum deleniti quidem distinctio assumenda et cum totam nisi. In, est dolorem explicabo blanditiis molestias sequi error nemo quam voluptas placeat veniam laborum ab ullam ipsam.</p>
-            <p>Eligendi, cupiditate repellendus corporis veniam voluptatem reprehenderit aperiam nulla illo ab animi? Iusto, quis, dolorum, nostrum obcaecati magnam reiciendis magni fugiat sint est quasi facere incidunt placeat debitis amet quas odit nam. Quae, deleniti, dicta dolore tempore ab vero adipisci omnis maiores quos doloremque consectetur quidem est provident ducimus nobis officiis veniam quas? Ratione, itaque, illo ducimus assumenda modi quas ab labore dolores ipsam pariatur repudiandae eaque dolor aliquid rerum amet recusandae obcaecati eveniet repellat quisquam non impedit quae vero doloribus. Optio, ratione, praesentium quidem corrupti inventore dolore eaque error quam ea repellat illum non dolor voluptatem ullam et ab.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, deleniti, inventore, eos, dolor mollitia at error cumque explicabo vitae labore tempore neque et deserunt itaque atque nemo laborum illo soluta magni totam. Corporis, unde veniam aspernatur eius fugit ratione ducimus dolorum cupiditate a illum magnam quia optio! Nesciunt, nostrum, iusto maiores vitae ipsum nobis dicta iure fugit error!</p>
+            <p>Eligendi, cupiditate repellendus corporis veniam voluptatem reprehenderit aperiam nulla illo ab animi? Iusto, quis, dolorum, nostrum obcaecati magnam reiciendis magni fugiat sint est quasi facere incidunt placeat debitis amet quas odit nam. Quae, deleniti, dicta dolore tempore ab vero adipisci omnis maiores quos doloremque consectetur quidem est provident ducimus nobis officiis veniam quas? Ratione, itaque, illo ducimus assumenda modi quas ab labore dolores ipsam pariatur repudiandae eaque dolor aliquid rerum amet recusandae obcaecati eveniet repellat quisquam non impedit quae vero doloribus.</p>
         </section>
         <section class="menus">
             <h3>Special menus</h3>
-            <article>
+            <article class="meat">
                 <h4>Meat menu</h4>
                 <figure>
                     <img src="ressources/images/meat-menu.jpg" alt="Meat dish">
@@ -73,7 +73,7 @@
                 <p>Expedita unde soluta reiciendis.</p>
                 <button class="more">See more</button>
             </article>
-            <article>
+            <article class="fish">
                 <h4>Fish menu</h4>
                 <figure>
                     <img src="ressources/images/fish-menu.jpg" alt="Fish dish">
@@ -88,12 +88,12 @@
                 </figure>
                 <p>Lorem ipsum dolor sit.</p>
                 <p>Distinctio, a corporis tempore.</p>
-                <p>Recusandae, et consequatur perferendis!</p>
+                <p>Recusandae, et consequatur !</p>
                 <p>Veritatis, obcaecati minus repellat.</p>
                 <p>Veniam, repudiandae animi quae.</p>
                 <button class="more">See more</button>
             </article>
-            <article>
+            <article class="veggie">
                 <h4>Vegetarian menu</h4>
                 <figure>
                     <img src="ressources/images/vegetarian-menu.jpg" alt="Vegetarian dish">
@@ -116,29 +116,31 @@
         </section>
     </main>
     <footer>
-        <section class="hours">
-            <h3>Opening hours</h3>
-            <p>Monday : Closed</p>
-            <p>Tue-Wed : 9am - 10pm</p>
-            <p>Thu-Fri : 9am - 10pm</p>
-            <p>Sat-Sun : 5pm - 10pm</p>
-        </section>
-        <section class="contact">
-            <h3>Contact</h3>
-            <adress>
-                <p>13 Christopher Street</p>
-                <p>New York,</p>
-                <p>NY 10014-3543</p>
-                <p><a href="tel:+0120008009999">+01 2000 800 9999</a></p>
-            </adress>
-        </section>
-        <section class="socials">
-            <h3>Social networks</h3>
-            <p>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-pinterest-p"></i>
-            </p>
+        <section class="container">
+            <section class="hours">
+                <h3>Opening hours</h3>
+                <p>Monday : Closed</p>
+                <p>Tue-Wed : 9am - 10pm</p>
+                <p>Thu-Fri : 9am - 10pm</p>
+                <p>Sat-Sun : 5pm - 10pm</p>
+            </section>
+            <section class="contact">
+                <h3>Contact</h3>
+                <adress>
+                    <p>13 Christopher Street</p>
+                    <p>New York,</p>
+                    <p>NY 10014-3543</p>
+                    <p><a href="tel:+0120008009999">+01 2000 800 9999</a></p>
+                </adress>
+            </section>
+            <section class="socials">
+                <h3>Social networks</h3>
+                <p>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest-p"></i>
+                </p>
+            </section>
         </section>
     </footer>
 <!--<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>-->
